Fix favicon paths

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8" />
 
     <!-- Favicon -->
-    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicons/android-chrome-512x512.png"> <!-- Windows 8 -->
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicon/android-chrome-512x512.png"> <!-- Windows 8 -->
     <meta name="msapplication-TileColor" content="#cf0921"/> <!-- Windows 8 color -->
 
-    <!--[if IE]><link rel="shortcut icon" href="images/favicons/favicon.ico"><![endif]-->
-    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/favicons/apple-touch-icon.png"><!-- iPad Retina-->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/favicons/apple-touch-icon.png"><!--iPhone Retina -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/favicons/apple-touch-icon.png"><!-- iPad 1 e 2 -->
-    <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/favicons/apple-touch-icon.png"><!-- iPhone, iPod e Android 2.2+ -->
+    <!--[if IE]><link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico"><![endif]-->
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/apple-touch-icon.png" />
 
     <!--  Social Media  -->
     <meta property="og:title" content="Jordan Tax Calculator">
@@ -25,7 +22,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
