--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!--  Social Media  -->
     <meta property="og:title" content="Jordan Tax Calculator">
     <meta property="og:description" content="Calculate your jordanian income tax!">
-    <meta property="og:image" content="%PUBLIC_URL%/android-chrome-512x512.png">
+    <meta property="og:image" content="%PUBLIC_URL%/images/og.jpg">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
