--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <!--  Google AdSense  -->
+    <script data-ad-client="ca-pub-1405387634139495" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <title>Jordan Tax Calculator</title>
   </head>
   <body>
