Add SEO meta data

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
 
     <!--  Social Media  -->
     <meta property="og:title" content="Jordan Tax Calculator">
-    <meta property="og:description" content="Calculate your jordanian income tax!">
+    <meta property="og:description" content="Calculate your jordanian income tax - احسب ضريبة الدخل الخاصة بك">
     <meta property="og:image" content="%PUBLIC_URL%/images/og.jpg">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Calculate your jordanian income tax - احسب ضريبة الدخل الخاصة بك"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -43,7 +43,7 @@
     <!--  Google AdSense  -->
     <script data-ad-client="ca-pub-1405387634139495" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <title>Jordan Tax Calculator</title>
+    <title>Jordan Tax Calculator - حاسبة ضريبة الدخل الأردنية</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
