--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/apple-touch-icon.png" />
 
+    <link rel="canonical" href="https://jordantaxcalc.com">
+
     <!--  Social Media  -->
     <meta property="og:title" content="Jordan Tax Calculator">
     <meta property="og:description" content="Calculate your jordanian income tax - احسب ضريبة الدخل الخاصة بك">
